--- a/index.html
+++ b/index.html
@@ -112,31 +112,31 @@
                         </div>
                         <button>All series</button>
                     </div>
-                    <img src="./media/image/TV series/wp5289109-peaky-blinders-desktop-wallpapers.jpg" alt="">
+                    <img src="./media/image/TVseries/wp5289109-peaky-blinders-desktop-wallpapers.jpg" alt="">
                 </article>
             </div>
         </section>
         <section class="news">
             <h2>Last News</h2>
-            <div class="news_wrapper">
+            <form name="newsinputs" class="news_wrapper">
                 <div class="news_wrapper_selector">
-                    <input type="radio" name="news_media" id="news_games" checked>
+                    <input type="radio" name="news_media_buttons" id="news_games" checked>
                     <label for="news_games">Games</label>
                 </div>
                 <div class="news_wrapper_selector">
-                    <input type="radio" name="news_media" id="news_movies">
+                    <input type="radio" name="news_media_buttons" id="news_movies">
                     <label for="news_movies">Movies</label>
                 </div>
                 <div class="news_wrapper_selector">
-                    <input type="radio" name="news_media" id="news_animes">
+                    <input type="radio" name="news_media_buttons" id="news_animes">
                     <label for="news_animes">Animes</label>
                 </div>
                 <div class="news_wrapper_selector">
-                    <input type="radio" name="news_media" id="news_series">
+                    <input type="radio" name="news_media_buttons" id="news_series">
                     <label for="news_series">TV Series</label>
                 </div>
-            </div>
-            <div class="news_container">
+            </form>
+            <div id="container_0" class="news_container">
                 <figure class="news_article">
                     <img src="./media/image/games/wp1834818-uncharted-4-wallpapers.jpg" alt="">
                     <div class="news_article_text">
@@ -208,30 +208,247 @@
                     </div>
                 </figure>
             </div>
+            <div id="container_1" class="news_container">
+                <figure class="news_article">
+                    <img src="./media/image/Movies/wp1817975-interstellar-wallpapers.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/Movies/b0b4483b329377b5636d0470e1f0f19d.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/Movies/locandina.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/Movies/wp2438114-fantastic-beasts-the-crimes-of-grindelwald-wallpapers.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/Movies/3DaysToKill-Poster.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/Movies/le-crime-de-l-orient-express-affiche-1000793.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/Movies/Collateral beauty.png" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/Movies/220px-2015_Focus_film_poster.png" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/Movies/wp2393105-spectre-wallpapers.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/Movies/The_Shape_of_Water_(film).png" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+            </div>
+            <div id="container_2" class="news_container">
+                <figure class="news_article">
+                    <img src="./media/image/animes/220px-Kimetsu_no_Yaiba_Mugen_Ressha_Hen_Poster.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/animes/Magi-The-Labyrinth-of-Magic-Saison-3-date-de-sortie.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/animes/affiche_600x856.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/animes/death-note-collage-i28406.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/animes/4503509.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/animes/7b3b1b0dd0ebb816ad9b14fe93ef1787.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/animes/TPN_KV-6cd342bd-c0dd-4d2b-b54c-ea6abfb6fbbf.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/animes/dp_gc36.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/animes/Fire-Force-Saison-2-anime-image-1.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/animes/jujutsu_kaisen_9153.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+            </div>
+            <div id="container_3" class="news_container">
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/51l9r0Y6Y3L.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/020977.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/086520.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/4129507.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/4981046.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/5304096.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/Chernobyl_2019_Miniseries.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/dark.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/peaky-blinders-4_orig.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+                <figure class="news_article">
+                    <img src="./media/image/TVseries/MV5BYTRiNDQwYzAtMzVlZS00NTI5LWJjYjUtMzkwNTUzMWMxZTllXkEyXkFqcGdeQXVyNDIzMzcwNjc@._V1_.jpg" alt="">
+                    <div class="news_article_text">
+                        <h3>Article title</h3>
+                        <figcaption>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pulvinar.</figcaption>
+                    </div>
+                </figure>
+            </div>
+            <script src="./javascript/news.js"></script>
         </section>
         <section class="release">
             <div class="release_selectors">
                 <h2>Future release</h2>
-                <div class="release_selectors_wrapper">
+                <form name="releaseinputs" class="release_selectors_wrapper">
                     <div class="release_selectors_wrapper_input">
-                        <input type="radio" name="release_media" id="release_games" checked>
+                        <input type="radio" name="release_media_buttons" id="release_games" checked>
                         <label for="release_games">Games</label>
                     </div>
                     <div class="release_selectors_wrapper_input">
-                        <input type="radio" name="release_media" id="release_movies">
+                        <input type="radio" name="release_media_buttons" id="release_movies">
                         <label for="release_movies">Movies</label>
                     </div>
                     <div class="release_selectors_wrapper_input">
-                        <input type="radio" name="release_media" id="release_animes">
+                        <input type="radio" name="release_media_buttons" id="release_animes">
                         <label for="release_animes">Animes</label>
                     </div>
                     <div class="release_selectors_wrapper_input">
-                        <input type="radio" name="release_media" id="release_series">
+                        <input type="radio" name="release_media_buttons" id="release_series">
                         <label for="release_series">TV Series</label>
                     </div>
-                </div>
+                </form>
             </div>
-            <div class="release_element">
+            <div id="release_container_0" class="release_element">
                 <div class="release_element_imageshadow">
                     <img src="./media/image/future_release/games/wp7480272-kena-bridge-of-spirits-wallpapers.jpg" alt="">
                 </div>
@@ -241,6 +458,37 @@
                     </p>
                 </div>
             </div>
+            <div id="release_container_1" class="release_element">
+                <div class="release_element_imageshadow">
+                    <img src="./media/image/future_release/movies/maxresdefault.jpg" alt="">
+                </div>
+                <div class="release_element_text">
+                    <h3>Top Gun 2: Maverick</h3>
+                    <p>Set 34 years after the events of the first film, the film sees the legendary Us Navy officer Pete "Maverick" Mitchell, meanwhile promoted to the rank of captain, new flight instructor of the pilot school "Top Gun", mentor and guide to Bradley, son of the late flight companion Goose, who tries to become an aviator like his father.
+                    </p>
+                </div>
+            </div>
+            <div id="release_container_2" class="release_element">
+                <div class="release_element_imageshadow">
+                    <img src="./media/image/future_release/animes/dcrlo4x-03cce620-5e4f-487a-9810-ec0619c452d0.png" alt="">
+                </div>
+                <div class="release_element_text">
+                    <h3>Bleach: Thousand-year blood war</h3>
+                    <p>Bleach Season 17 will adapt the 1000 Year Blood War manga story arc from the creator Tite Kubo. F Fans of the popular anime series were over the moon after knowing that Bleach season 17 the conclusive arc, will premiere this winter of 2021.
+                    </p>
+                </div>
+            </div>
+            <div id="release_container_3" class="release_element">
+                <div class="release_element_imageshadow">
+                    <img src="./media/image/future_release/tvseries/The-Witcher-Season-2-April-2020-Development-amp-Latest-News.png" alt="">
+                </div>
+                <div class="release_element_text">
+                    <h3>The Witcher: Season 2</h3>
+                    <p>Convinced Yennefer's life was lost at the Battle of Sodden, Geralt of Rivia brings Princess Cirilla to the safest place he knows, his childhood home of Kaer Morhen, While the Continent's kings, elves, humans and demons strive for supremacy outside its walls, he must protect the girl from something far more dangerous: the mysterious power she possesses inside.
+                    </p>
+                </div>
+            </div>
+            <script src="./javascript/release.js"></script>
         </section>
     </main>
     <footer class="footer">
