sass structure and added login and sign in form

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                     <li><a href="#">Animes</a></li>
                 </ul>
             </nav>
-            <button class="header_signin">Sign in</button>
+            <button class="header_signin"><a href="./pages/login.html">Log in</a></button>
         </header>
         <div class="headercontainer_title">
             <h1>Welcome to InfoMedia</h1>
