solved media grid bug and links bug

--- a/pages/login.html
+++ b/pages/login.html
@@ -24,7 +24,7 @@
                     </ul>
                     <script src="./javascript/menu.js"></script>
                 </div>
-                <a href="./index.html" class="header_menulogo_containerlogo">
+                <a href="../index.html" class="header_menulogo_containerlogo">
                     <!-- <img class="header_menulogo_containerlogo_logo" src="./media/image/logo/alpha_wolf_output-onlinepngtools.svg" alt=""> -->
                     <svg id="svglogo_path" version="1.0" xmlns="http://www.w3.org/2000/svg"
                     width="40px" height="40px" viewBox="0 0 860.000000 840.000000"
